2007-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tclUnixCompat.c (TclpGetHostByName): The six-argument form of
	getaddressbyname_r() uses the fifth argument to indicate whether the
	lookup succeeded or not on at least one platform. [Bug 1618235]

2007-10-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/regc_lex.c (lexescape): Ensure that backreference numbers
	can't overflow a signed int in a way that breaks things. [Bug 1810264]

2007-10-15  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclParse.c (Tcl_ParseBraces): fix for possible read
	after the end of buffer, [Bug 1813528] (Joe Mistachkin).

2007-10-03  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclObj.c (Tcl_FindCommandFromObj): fix finding a deleted
	command; cannot trigger this from Tcl itself, but crash reported
	on xotcl. This check is new to 8.4 but exists in 8.5, so this is a
	backport or something. Thanks Gustaf Neumann.

2007-10-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tcl.h (Tcl_DecrRefCount): Update change from 2006-05-29
	to make macro more warning-robust in unbraced if code.

2007-10-02  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.17
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

2007-09-20  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.16 TAGGED FOR RELEASE ***

	* doc/load.n:	Backport corrected example.

2007-09-19  Don Porter  <dgp@users.sourceforge.net>

	* unix/Makefile.in:     Update `make dist` so that tclDTrace.d is
	included in the source code distribution.

	* generic/tclPkg.c:	Backport fix for [1573844] to the
	* tests/pkg.test:	TCL_TIP268 sections.

2007-09-18  Don Porter  <dgp@users.sourceforge.net>

	* changes: updates for 8.4.16 release.

2007-09-15  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.1x): 	replace direct use of '/usr/ccs/bin/ld'