@@ -1,3 +1,11 @@
+2007-11-15  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/regc_nfa.c:	Fixed infinite loop in the regexp compiler
+	* generic/regcomp.c:	[Bug 1810038].  Corrected looping logic in
+	* tests/regexp.test:	fixempties() to avoid wasting time walking a
+	list of dead states [Bug 1832612].  Convert optst() from expensive
+	no-op to a cheap no-op.  Improve newline usage in debug output.
+
 2007-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* unix/tclUnixCompat.c (TclpGetHostByName): The six-argument form of
